crates/eml_cli/tests/snapshots/integration__ui__run@strings__multiline.em.snap
---
source: crates/eml_cli/tests/ui.rs
expression: "format!(\"--- stdout ---\\n{stdout}--- stderr ---\\n{stderr}\")"
input_file: tests/ui/run/strings/multiline.em
---
--- stdout ---
first
  deeper

tab	here """quoted"""

Hello, eml!
  indented line
after
--- stderr ---
